src/main/istio/destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ngs-cust
spec:
  host: ngs-cust
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
