src/main/istio/ngs-cust-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ngs-cust-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ngs-cust
spec:
  hosts:
    - "*"
  gateways:
    - ngs-cust-gateway
  http:
    - match:
        - uri:
            exact: /
        - uri:
            prefix: /sample
      route:
        - destination:
            host: ngs-cust
            subset: v1
          weight: 70
        - destination:
            host: ngs-cust
            subset: v2
          weight: 30
